--- a/build.xml
+++ b/build.xml
@@ -14,13 +14,15 @@
     <property name="dist.name" value="xrechnung-${xrechnung.version}-validation-configuration"/>
     <property name="validationtool.jar" value="validationtool-1.0.1-standalone.jar"/>
     <property name="saxon.jar" value="saxon9he.jar"/>
+    <property name="cii.schema.zip" value="D16B_SCRDM__Subset__CII.zip"/>
+    <property name="cii.schema.uncoupled.zip" value="d16b-cii-uncoupled.zip"/>
+    <property name="ubl.schema.zip" value="UBL-2.1.zip"/>
+    <property name="cen.rules.zip" value="validation-1.0.0.zip"/>
+    <property name="xrechnung.rules.zip" value="xrechnung-1_1-schematron-2017-12-19.zip"/>
     <!-- Resource directories -->
     <property name="schema.dir" value="${basedir}/../../xsd"/>
     <property name="test.docs.dir" value="${test.src.dir}/instances"/>
     <property name="reports.dir" value="${basedir}/reports"/>
-    <property name="ubl.schema.zip" value="UBL-2.1.zip"/>
-    <property name="cen.rules.zip" value="validation-1.0.0.zip"/>
-    <property name="xrechnung.rules.zip" value="xrechnung-1_1-schematron-2017-12-19.zip"/>
     <!-- root/work directory where KoSIT validationtool expects Schema(s)-and trons -->
     <property name="repository.dir" location="${build.dir}"/>
     <property name="resource.dir" location="${repository.dir}/resources"/>
@@ -48,7 +50,7 @@
             <flattenmapper/>
         </unzip>
     </target>
-    <target name="prepare-validationtool" depends="init" description="Download KoSIT validation tool">
+    <target name="prepare-validationtool" depends="init" description="Download and setup KoSIT validation tool">
         <get src="https://github.com/itplr-kosit/validationtool/releases/download/validationtool-1_0_1/validationtool-dist-1.0.1-standalone.zip" dest="${download.dir}" verbose="true" skipexisting="true" usetimestamp="true"/>
         <unzip src="${download.dir}/validationtool-dist-1.0.1-standalone.zip" dest="${lib.dir}">
             <patternset>
@@ -57,7 +59,7 @@
             <flattenmapper/>
         </unzip>
     </target>
-    <target name="retrieve-cen-rules" depends="init">
+    <target name="retrieve-cen-rules" depends="init" >
         <get src="https://github.com/CenPC434/validation/archive/${cen.rules.zip}" dest="${download.dir}" verbose="true" skipexisting="true" usetimestamp="true"/>
     </target>
     <target name="retrieve-xrechnung-rules" depends="init">
@@ -66,7 +68,16 @@
     <target name="retrieve-ubl-schema" depends="init" description="Download UBL schemas and rules">
         <get src="http://docs.oasis-open.org/ubl/os-UBL-2.1/${ubl.schema.zip}" dest="${download.dir}" verbose="true" skipexisting="true" usetimestamp="true"/>
     </target>
-    <target name="retrieve-all-schema-rules" depends="retrieve-ubl-schema,retrieve-cen-rules,retrieve-xrechnung-rules" description="Retrieves all 3rd party XSDs and XSLTs"/>
+    <target name="retrieve-cii-schema" depends="init" description="Download UN/CEFACT CII schemas">
+        <get src="http://www.unece.org/fileadmin/DAM/cefact/xml_schemas/${cii.schema.zip}" dest="${download.dir}" verbose="true" skipexisting="true" usetimestamp="true"/>
+        <unzip src="${download.dir}/${cii.schema.zip}" dest="${download.dir}">
+            <patternset>
+                <include name="**/D16B*uncoupled.zip"/>
+            </patternset>
+            <mergemapper to="${cii.schema.uncoupled.zip}"/>
+        </unzip>
+    </target>
+    <target name="retrieve-all-schema-rules" depends="retrieve-ubl-schema,retrieve-cen-rules,retrieve-xrechnung-rules,retrieve-cii-schema" description="Retrieves all 3rd party XSDs and XSLTs"/>
     <target name="compile" depends="retrieve-all-schema-rules,prepare-saxon,prepare-validationtool" description="Compile XSDs and XSLTs">
         <echo>Compiling Schemas and XSLTs ...</echo>
         <copy file="scenarios.xml" todir="${repository.dir}"/>
@@ -81,6 +92,8 @@
         <unzip src="${download.dir}/${cen.rules.zip}" dest="${download.dir}">
             <patternset>
                 <include name="validation-validation-1.0.0/ubl/xslt/EN16931-UBL-model.xslt"/>
+                <include name="validation-validation-1.0.0/cii/xslt/EN16931-CII-validation.xslt"/>
+                
             </patternset>
             <flattenmapper/>
         </unzip>
@@ -90,8 +103,19 @@
             </patternset>
             <flattenmapper/>
         </unzip>
+        <unzip src="${download.dir}/${cii.schema.uncoupled.zip}" dest="${resource.dir}/cii/16b/xsd">
+            <patternset>
+                <include name="**/CrossIndustryInvoice*.xsd"/>
+            </patternset>
+            <flattenmapper/>
+        </unzip>
         <!-- according to https://www.saxonica.com/html/documentation/using-xsl/xsltfromant.html-->
         <xslt in="${download.dir}/EN16931-UBL-model.xslt" out="${resource.dir}/ubl/2.1/xsl/EN16931-UBL-validation.xsl" style="${src.dir}/remove-dead-apply-templates.xsl">
+            <classpath location="${lib.dir}/${saxon.jar}" />
+            <factory name="net.sf.saxon.TransformerFactoryImpl"/>
+        </xslt>
+        
+        <xslt in="${download.dir}/EN16931-CII-validation.xslt" out="${resource.dir}/cii/16b/xsl/EN16931-CII-validation.xsl" style="${src.dir}/remove-dead-apply-templates.xsl">
             <classpath location="${lib.dir}/${saxon.jar}" />
             <factory name="net.sf.saxon.TransformerFactoryImpl"/>
         </xslt>
@@ -111,12 +135,23 @@
             <arg value="${reports.dir}"/>
             <arg value="${test.docs.dir}/*.xml"/>
         </java>
-        <!-- 
-        <echo>Schema validating reports ...</echo><schemavalidate fullchecking="yes" failonerror="yes"><schema namespace="http://www.xoev.de/de/validator/varl/1" file="${schema.dir}/report.xsd"/><fileset dir="${reports.dir}" includes="*.xml"/></schemavalidate><echo>Schematron validating reports ...</echo><apply executable="java" failonerror="yes"><arg value="-classpath"/><arg value="saxon9he.jar"/><arg value="net.sf.saxon.Transform"/><arg value="-xsl:${schema.dir}/report.sch.xsl"/><srcfile/><fileset dir="${reports.dir}" includes="*.xml"/></apply>
-        -->
+        <echo>Schema validating reports ...</echo>
+        <schemavalidate fullchecking="yes" failonerror="yes">
+            <schema namespace="http://www.xoev.de/de/validator/varl/1" file="${schema.dir}/report.xsd"/>
+            <fileset dir="${reports.dir}" includes="*.xml"/>
+        </schemavalidate>
+        <echo>Schematron validating reports ...</echo>
+        <apply executable="java" failonerror="yes">
+            <arg value="-classpath"/>
+            <arg value="saxon9he.jar"/>
+            <arg value="net.sf.saxon.Transform"/>
+            <arg value="-xsl:${schema.dir}/report.sch.xsl"/>
+            <srcfile/>
+            <fileset dir="${reports.dir}" includes="*.xml"/>
+        </apply>
     </target>
     <target name="dist" depends="init, compile" description="generate the distribution">
-        <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
+        
         <zip destfile="${dist.dir}/xrechnung_1.1_${build.date}.zip" basedir="${build.dir}" excludes="download/**,test"/>
     </target>
     <target name="clean" description="clean up">
