--- a/build.xml
+++ b/build.xml
@@ -15,8 +15,10 @@
     <property name="dist.name" value="xrechnung-${xrechnung.version}-validation-configuration"/>
     <property name="validationtool.jar" value="validationtool-1.0.1-standalone.jar"/>
     <property name="saxon.jar" value="saxon9he.jar"/>
+    <property name="cii.version" value="D16B"/>
     <property name="cii.schema.zip" value="D16B_SCRDM__Subset__CII.zip"/>
     <property name="cii.schema.uncoupled.zip" value="d16b-cii-uncoupled.zip"/>
+    <property name="cii.download.url" value="http://www.unece.org/fileadmin/DAM/cefact/xml_schemas/${cii.schema.zip}"/>
     <property name="ubl.version" value="2.1"/>
     <property name="ubl.download.url.prefix"
         value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}/"/>
@@ -63,10 +65,10 @@
         <attribute name="schematronbinding" default="xslt2"
             description="Which XSLT version to build for."/>
         <sequential>
-            
+
             <local name="schematron.basename"/>
             <basename file="@{schematron}" suffix="@{insuffix}" property="schematron.basename"/>
-            
+
             <echo message="Compiling '@{schematron}' Schematron with basename='${schematron.basename}'"/>
             <mkdir dir="@{workdir}"/>
 
@@ -180,7 +182,7 @@
     </target>
     <target name="retrieve-cii-schema" depends="init"
         description="Download UN/CEFACT CII schemas to download directory">
-        <get src="http://www.unece.org/fileadmin/DAM/cefact/xml_schemas/${cii.schema.zip}"
+        <get src="${cii.download.url}"
             dest="${download.dir}" verbose="true" skipexisting="true" usetimestamp="true"/>
         <unzip src="${download.dir}/${cii.schema.zip}" dest="${download.dir}">
             <patternset>
@@ -258,6 +260,8 @@
         <filter token="xrechnung.build.date" value="${xrechnung.build.date}"/>
         <filter token="ubl.version" value="${ubl.version}"/>
         <filter token="ubl.download.url" value="${ubl.download.url}}"/>
+        <filter token="cii.version" value="${cii.version}"/>
+        <filter token="cii.download.url" value="${cii.download.url}"/>
         <copy file="scenarios.xml" todir="${repository.dir}" failonerror="true" filtering="true"/>
     </target>
 
