--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
-* text=auto
+* text=auto eol=lf
 
 # Declare files that will always have CRLF line endings on checkout.
 **/instances/*.xml text eol=crlf
